---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1..2 of int\nvar _ := a(1,2,3,4)"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"_"@(FileId(1), 30..31) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 35..36): expected 1 argument, found 4
| error for (FileId(1), 35..36): subscript has 3 extra arguments
